# rusty-but-fit

./: .gitignore  Cargo.toml  LICENSE  README.md  activity2.fit
.github/workflows/: compile.yml  release.yml
src/: data_types.rs  fields.rs  fit_file.rs  fit_file_raw.rs  key_value_enum.rs  lib.rs  main.rs  message.rs  message_types.rs  messages.rs  types.rs
src/fit_file/: fields.rs  key_value_enum.rs  message.rs  message_types.rs
src/fit_file_raw/: message_raw.rs
tools/garmin-sdk-xlsx-deserializer/: Cargo.toml  readme.md  types.rs
tools/garmin-sdk-xlsx-deserializer/src/: main.rs
