[package]
name = "rusty-but-fit"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Allow to read Garmin's .FIT files and outputs them as JSON."
repository = "https://github.com/meistermeier/rusty-but-fit"
readme = "README.md"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
itertools = "0.13.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
