[package]
name = "rusty-but-fit"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Read Garmin's .FIT files and output them as JSON."
repository = "https://github.com/meistermeier/rusty-but-fit"
readme = "README.md"

[lib]
name = "garmin_fit"
path = "src/fit_file.rs"

[[bin]]
name = "rusty-but-fit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
itertools = "0.14.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
